[gd_scene load_steps=16 format=3 uid="uid://c443mv1x1ki7r"]

[ext_resource type="Script" path="res://Scripts/target.gd" id="1_7ryt0"]
[ext_resource type="Texture2D" uid="uid://cy08maxqpa2qc" path="res://assets/goatt.png" id="2_rta2w"]

[sub_resource type="CanvasTexture" id="CanvasTexture_hepuo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbi7v"]
size = Vector2(33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t18t"]
atlas = ExtResource("2_rta2w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0efxl"]
atlas = ExtResource("2_rta2w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tny3c"]
atlas = ExtResource("2_rta2w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pepi6"]
atlas = ExtResource("2_rta2w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i0xm"]
atlas = ExtResource("2_rta2w")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnlws"]
atlas = ExtResource("2_rta2w")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mbg6"]
atlas = ExtResource("2_rta2w")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkpp8"]
atlas = ExtResource("2_rta2w")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlqlr"]
atlas = ExtResource("2_rta2w")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fn50q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t18t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0efxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tny3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pepi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i0xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnlws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mbg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkpp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlqlr")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqg6j"]
size = Vector2(46, 52)

[node name="animal" type="RigidBody2D" node_paths=PackedStringArray("health_bar", "splash", "labelee", "anim") groups=["target"]]
collision_layer = 5
collision_mask = 5
input_pickable = true
mass = 0.001
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_7ryt0")
health_bar = NodePath("ProgressBar")
splash = NodePath("CPUParticles2D")
labelee = NodePath("Label")
anim = NodePath("Lionstatue")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.117647)
position = Vector2(-2.5, 16.5)
scale = Vector2(51, 3)
texture = SubResource("CanvasTexture_hepuo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_qbi7v")

[node name="Lionstatue" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fn50q")
animation = &"walk"
frame = 2
frame_progress = 0.927949

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_hqg6j")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -24.0
offset_top = -42.0
offset_right = 24.0
offset_bottom = -29.0
theme_override_font_sizes/font_size = 6
max_value = 5.0
step = 1.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
speed_scale = 2.0
explosiveness = 0.85
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0

[node name="Label" type="Label" parent="."]
offset_left = -43.0
offset_top = 26.0
offset_right = 50.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 8
text = "MouseEnter : False/true"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
